--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Sistema para la gestion de una facción de GTA SAMP en la cual se controlara usuarios, gestiones realizadas, ascensos, descensos y automatizar todo lo que actualmente se hace a mano",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js",
+    "start": "node dist/index.js",
+    "build": ""
   },
   "repository": {
     "type": "git",
@@ -21,5 +24,14 @@
   "bugs": {
     "url": "https://github.com/manny1909/sistema-gestion-SAFA/issues"
   },
-  "homepage": "https://github.com/manny1909/sistema-gestion-SAFA#readme"
+  "homepage": "https://github.com/manny1909/sistema-gestion-SAFA#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "morgan": "^1.10.0",
+    "sequelize": "^6.19.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
