--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js",
+    "dev": "nodemon dist/index.js",
+    "build-dev":"tsc --watch",
     "start": "node dist/index.js",
-    "build": ""
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -27,11 +28,17 @@
   "homepage": "https://github.com/manny1909/sistema-gestion-SAFA#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "sequelize": "^6.19.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
+    "nodemon": "^2.0.16",
+    "tslint": "^6.1.3",
+    "typescript": "^4.6.4"
   }
 }
