--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon dist/index.js",
-    "build-dev":"tsc --watch",
+    "build-dev": "tsc --watch",
     "start": "node dist/index.js",
     "build": "tsc"
   },
@@ -30,8 +30,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "morgan": "^1.10.0",
-    "sequelize": "^6.19.2"
+    "mongoose": "^6.3.4",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
