--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon dist/index.js",
+    "dev": "nodemon dist/src/index.js",
+    "seed": "node dist/src/seeders/index.js",
     "build-dev": "tsc --watch",
     "start": "node dist/index.js",
     "build": "tsc"
@@ -31,11 +32,13 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.4",
+    "mongoose-seeder": "^1.2.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/mongoose-seeder": "^1.2.6",
     "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.16",
     "tslint": "^6.1.3",
