--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   },
   "homepage": "https://github.com/manny1909/sistema-gestion-SAFA#readme",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.9",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "mongoose-seeder": "^1.2.1",
     "morgan": "^1.10.0"
