--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon dist/src/index.js",
     "seed": "node dist/src/seeders/index.js",
     "build-dev": "tsc --watch",
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
     "build": "tsc"
   },
   "repository": {
