--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@auth0/angular-jwt": "^5.1.2",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.7.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
