--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --open",
+    "start": "ng serve --open --host=26.49.32.83 --port 4200",
+    "start-radadmin": "ng serve --open --host=26.205.192.29 --port 4200",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
