--- a/package.json
+++ b/package.json
@@ -28,20 +28,33 @@
   },
   "homepage": "https://github.com/manny1909/sistema-gestion-SAFA#readme",
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "@types/jsonwebtoken": "^8.5.9",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "mongoose-seeder": "^1.2.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.7",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "seedgoose": "^2.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mongoose-seeder": "^1.2.6",
     "@types/morgan": "^1.9.3",
+    "@types/nodemailer": "^6.4.14",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^3.0.13",
+    "@types/passport-local": "^1.0.38",
     "nodemon": "^2.0.16",
     "tslint": "^6.1.3",
     "typescript": "^4.6.4"
