fix implementación docker

--- a/ClientApp/Dockerfile
+++ b/ClientApp/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:16.20.0
-RUN mkdir -p /usr/src/app
-WORKDIR /usr/src/app
-COPY package.json /usr/src/app
+RUN mkdir -p /usr/src/ClientApp
+WORKDIR /usr/src/ClientApp
+COPY package.json /usr/src/ClientApp
 RUN npm cache clean --force
 RUN npm install
-COPY . /usr/src/app
+COPY . /usr/src/ClientApp
 EXPOSE 4200
 CMD ["npm","start"]
