--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "sistema-gestion-safa",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "Sistema para la gestion de una facción de GTA SAMP en la cual se controlara usuarios, gestiones realizadas, ascensos, descensos y automatizar todo lo que actualmente se hace a mano",
+  "description": "backend del sistema de gestión de facciones",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon dist/src/index.js",
+    "dev-dist": "nodemon dist/src/index.js",
+    "dev": "ts-node-dev src/index.ts",
     "seed": "node dist/src/seeders/seed.js",
     "build-dev": "tsc --watch",
     "start": "node dist/src/index.js",
@@ -16,8 +17,7 @@
     "url": "git+https://github.com/manny1909/sistema-gestion-SAFA.git"
   },
   "keywords": [
-    "SAFA",
-    "gestion",
+    "gestión",
     "angular",
     "node."
   ],
@@ -56,6 +56,7 @@
     "@types/passport-jwt": "^3.0.13",
     "@types/passport-local": "^1.0.38",
     "nodemon": "^2.0.16",
+    "ts-node-dev": "^2.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.6.4"
   }
