--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -34,8 +34,8 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/styles/my-theme.scss"
             ],
             "scripts": []
           },
